# experimental_layers

./: README.md  pyproject.toml
experimental_layers/: activations.py  datasets.py
experimental_layers/models/: __init__.py  sinusoidal_layer_model.py  snake_activation_model.py
kapotic_layers/: layers.py  models.py
